--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic-native/media": "^4.20.0",
     "@ionic-native/onesignal": "^4.20.0",
     "@ionic-native/paypal": "^4.20.0",
+    "@ionic-native/push": "^4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic-native/video-editor": "^4.20.0",
@@ -60,6 +61,7 @@
     "cordova-plugin-media": "^5.0.3",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "cordova-plugin-video-editor": "^1.1.3",
+    "cordova-support-google-services": "^1.3.2",
     "firebase": "^4.8.0",
     "info.protonet.imageresizer": "^0.1.1",
     "ionic-angular": "3.9.9",
@@ -68,6 +70,7 @@
     "ngx-emoji-picker": "0.0.2",
     "ngx-virtual-scroller": "^3.0.3",
     "onesignal-cordova-plugin": "^2.11.4",
+    "phonegap-plugin-multidex": "^1.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
