--- a/package.json
+++ b/package.json
@@ -52,12 +52,15 @@
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-plugin-aes256-encryption": "^2.0.1",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.2.0",
     "cordova-plugin-filepath": "^1.6.0",
+    "cordova-plugin-googleplus": "^8.5.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-media": "^5.0.3",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
@@ -80,7 +83,6 @@
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
     "cordova-android": "^9.1.0",
-    "cordova-ios": "^6.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook-connect": "^3.2.0",
     "cordova-plugin-facebook4": "^6.4.0",
@@ -92,7 +94,8 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "es6-promise-plugin": "^4.2.2",
-    "typescript": "2.6.2"
+    "ts-node": "~8.3.0",
+    "typescript": "~4.4.4"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -103,7 +106,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
+      },
       "info.protonet.imageresizer": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-camera": {
@@ -115,7 +120,9 @@
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-media": {},
+      "cordova-plugin-media": {
+        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+      },
       "cordova-plugin-file-opener2": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
